--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,14 +1,24 @@
 /* board */
 .board > table {
+	border: 3px solid black;
+	border-collapse: collapse;
+}
+
+.board > table > tbody > tr > td {
 	border: 1px solid black;
 }
 
-.board > table > td {
-	border: 1px solid black;
+.box {
+	position: relative;
+	width: 80px;
+	height: 80px;
 }
 
-/* pawnw */
+/* pawn */
 .pawn {
+	top: 0;
+	left: 0;
+	position: absolute;
 	width: 80px;
 	height: 80px;
 	-webkit-border-radius: 9999px;
@@ -29,5 +39,4 @@
 	color: red;
 	line-height: 14px;
 	font-size: 14px;
-	padding: 33px 0;
 }
