--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,11 +1,95 @@
+@font-face {
+	font-family: 'silkscreenbold';
+	src: url('../fonts/slkscrb-webfont.eot');
+	src: url('../fonts/slkscrb-webfont.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/slkscrb-webfont.woff') format('woff'),
+		url('../fonts/slkscrb-webfont.ttf') format('truetype'),
+		url('../fonts/slkscrb-webfont.svg#silkscreenbold') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+body {
+	height: 100%;
+	font-family: 'silkscreenbold', Verdana, Arial, sans-serif;
+	background-color: #C4D7ED;
+	font-size: 20px;
+	line-height: 14px;
+}
+
+.brand {
+	line-height: 26px;
+	margin-bottom: 20px;
+	text-align: center;
+}
+
+input[type=text],
+input[type=email],
+input[type=password],
+textarea {
+	-webkit-transition: box-shadow 0.30s ease-in-out;
+	-moz-transition: box-shadow 0.30s ease-in-out;
+	-ms-transition: box-shadow 0.30s ease-in-out;
+	-o-transition: box-shadow 0.30s ease-in-out;
+	outline: none;
+	padding: 4px 10px;
+	border: 1px solid #DDDDDD;
+	-webkit-border-radius: 50px;
+	-moz-border-radius: 50px;
+	border-radius: 50px;
+	font-family: Verdana, Arial, sans-serif;
+}
+ 
+input[type=text]:focus,
+input[type=email]:focus,
+input[type=password]:focus,
+textarea:focus {
+	box-shadow: 0 0 5px #333333;
+}
+
+.form-control {
+	margin-bottom: 20px;
+}
+
+.btn {
+	font-family: 'silkscreenbold', Verdana, Arial, sans-serif;
+	color: #ffffff;
+	font-size: 20px;
+	background-color: #2b92d6;
+	padding: 16px 14px;
+	text-decoration: none;
+	border: none;
+}
+
+.btn:hover {
+	background-color: #2facfa;
+	text-decoration: none;
+}
+
+.btn-block {
+	display: block;
+	width: 100%;
+}
+
+.wrapper {
+	display: table;
+	margin: 0 auto;
+}
+
 /* board */
+.board {
+	margin-bottom: 20px;
+}
+
 .board > table {
 	border: 3px solid black;
 	border-collapse: collapse;
+	background-color: #F4F4F4;
 }
 
 .board > table > tbody > tr > td {
 	border: 1px solid black;
+	padding: 4px;
 }
 
 .box {
@@ -16,8 +100,6 @@
 
 /* pawn */
 .pawn {
-	top: 0;
-	left: 0;
 	position: absolute;
 	width: 80px;
 	height: 80px;
@@ -28,15 +110,38 @@
 }
 
 .yellow {
-	background-color: yellow;
+	background-color: #FDD131;
 }
 
 .blue {
-	background-color: blue;
+	background-color: #375D81;
 }
 
 .cant-move {
 	color: red;
 	line-height: 14px;
 	font-size: 14px;
+}
+
+/* mgr */
+.mgr {
+	margin-bottom: 20px;
+	padding: 16px;
+	background-color: #F4F4F4;
+}
+
+.mgr > h3:first-child {
+	margin-top: 0;
+}
+
+.pn {
+	
+}
+
+.pn-one {
+	color: #FDD131;
+}
+
+.pn-two {
+	color: #375D81;
 }
