--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -159,6 +159,10 @@ textarea:focus {
 	background-color: #99C4EC;
 }
 
+.playable {
+	border-color: green;
+}
+
 .move {
 	position: absolute;
 	width: 80px;
