--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -165,9 +165,14 @@ textarea:focus {
 
 .move {
 	position: absolute;
-	width: 80px;
-	height: 80px;
-	background-color: red;
+	top: 20px;
+	left: 20px;
+	width: 40px;
+	height: 40px;
+	-webkit-border-radius: 9999px;
+	-moz-border-radius: 9999px;
+	border-radius: 9999px;
+	background-color: #888888;
 }
 
 /* mgr */
