display blocked pawns : DONE

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -167,6 +167,10 @@ textarea:focus {
 	border-style: dashed !important;
 }
 
+.blocked {
+	border-color: red;
+}
+
 /* mgr */
 .mgr {
 	margin-bottom: 20px;
